--- a/global.css
+++ b/global.css
@@ -2,6 +2,26 @@ html {
 	font-family: sans-serif;
 	padding-inline: 1em;
 }
+body a[href='/'] {
+	display: block;
+	margin-top: 1em;
+	text-align: right;
+}
+body a[href='/']::before {
+	content: '\2190';
+}
+img {
+	display: block;
+	margin-block: 1em;
+}
 li {
 	line-height: 1.6;
+}
+dt {
+	font-weight: bold;
+	margin-top: 1em;
+	margin-bottom: 0.5em;
+}
+dd {
+	margin-inline-start: 0.5em;
 }
